--- a/QUIZ/hanking.css
+++ b/QUIZ/hanking.css
@@ -14,6 +14,12 @@
 }
 
 body{
+    margin: 0;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
     background: var(--white);
     transition: 0.2s linear;
 }
@@ -37,24 +43,15 @@ body.escuro{
 }
 
 header {
-    position: relative;
-    padding: 20px;
+    height: 10px;
     display: flex;
     justify-content: center;
-    margin-bottom: 0;
 }
-
-ul{
-    padding: 0;
-    margin: 0;
-    list-style: none;
-}
-
 
 ul li {
     position: relative;
-    top: 90px;
-    left: -50px;
+    bottom: 70px;
+    left: -110px;
     font-size: 30px;
     display: inline-block;
     margin: 0 10px; 
@@ -83,15 +80,12 @@ nav a {
 .logo-inicio{
     position: relative;
     z-index: 3;
-    top: 15rem;
-    left: 0.3125px;
+    top: 80px;
+    height: 120px;
 }
 
 .logo{
-    width: 100px;
-    height: auto;
     max-width: 120px;
-    width: auto;
 }
 
 .conteudos{
@@ -102,14 +96,13 @@ nav a {
 .quiz{
     font-size: 40px;
     position: relative;
-    top: 9.375rem;
-    right: 2.8125px;
+    bottom: 35px;
+    right: 5px;
     background: var(--light-green);
     padding: 30px 25px;
     margin: 10px 5px;
     border-radius: 25px;
     margin: 20px 0; 
-    margin-left: -1.25rem;
     margin-bottom: 0;
     display: inline-block;
     z-index: 3;    
@@ -117,7 +110,7 @@ nav a {
 
 .menu-items {
     position: relative;
-    top: 100px;
+    bottom: 60px;
     left: -10px;
     
 }
@@ -186,17 +179,44 @@ nav a {
     color: var(--dark-green);
 }
 
+#confetti {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+}
+
+.confetti-piece {
+    position: absolute;
+    width: 10px;
+    height: 20px;
+    background-color: red;
+    opacity: 0;
+    animation: fall linear infinite;
+    transform-origin: center;
+}
+
+/* Animação dos confetes */
+@keyframes fall {
+    0% {
+        opacity: 1;
+        transform: translateY(-100vh) rotate(0deg);
+    }
+    100% {
+        opacity: 0;
+        transform: translateY(100vh) rotate(720deg);
+    }
+}
+
 .fundo {
     grid-area: 1 / 1;
     width: 100%;
-    height: auto;
     display: block
 }
 
 .fundo2 {
     grid-area: 1 / 1;
     width: 100%;
-    height: auto;
     display: block;
     margin-top: 50px;
 }
@@ -204,7 +224,6 @@ nav a {
 .fundo3{
     grid-area: 1 / 1;
     width: 100%;
-    height: auto;
     display: block;
     margin-top: 50px;
 }
